@@ -43,7 +43,6 @@ Ian Broadfoot <ibroadfo@cis.strath.ac.uk>
         elvi: yubnub
 
 James Rowe <jnrowe@ukfsn.org>
-        elvi: genpkg
         plus useful patches/maintenance.
 
 Aparna Jaitly <aparnajaitly@hotmail.com>
