@@ -1,23 +1,0 @@
-#!/bin/sh
-# $Id$
-# elvis: genpkg		-- Search Gentoo packages (packages.gentoo.org)
-. surfraw || exit 1
-
-w3_usage_hook () {
-    cat <<EOF
-Usage: $w3_argv0 [options] [packagename]...
-Description:
-  Surfraw search Gentoo packages (packages.gentoo.org)
-EOF
-    w3_global_usage
-}
-
-w3_config
-w3_parse_args "$@"
-# w3_args now contains a list of arguments
-if test -z "$w3_args"; then
-    w3_browse_url "http://packages.gentoo.org"
-else
-    escaped_args=`w3_url_of_arg $w3_args`
-    w3_browse_url "http://packages.gentoo.org/package/${escaped_args}"
-fi
