@@ -49,7 +49,6 @@ elvi.1sr.gz @mandir@/man1/freshmeat.1sr.gz
 elvi.1sr.gz @mandir@/man1/fsfdir.1sr.gz
 elvi.1sr.gz @mandir@/man1/gcache.1sr.gz
 elvi.1sr.gz @mandir@/man1/genbugs.1sr.gz
-elvi.1sr.gz @mandir@/man1/genpkg.1sr.gz
 elvi.1sr.gz @mandir@/man1/genportage.1sr.gz
 elvi.1sr.gz @mandir@/man1/google.1sr.gz
 elvi.1sr.gz @mandir@/man1/gutenberg.1sr.gz
