@@ -1,2 +1,0 @@
-genpkg surfraw
-www-client/surfraw
